--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "dana k",
+  "author": "dana k , mohmad yaqoob , ali a.karim ali",
   "license": "ISC",
   "dependencies": {
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
     "express": "^4.21.0",
-    "mongoose": "^8.6.3"
+    "express-ejs-layouts": "^2.5.1",
+    "mongoose": "^8.7.0"
   }
 }
