--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "ejs": "^3.1.10",
     "express": "^4.21.0",
     "express-ejs-layouts": "^2.5.1",
-    "mongoose": "^8.7.0"
+    "express-session": "^1.18.0",
+    "mongoose": "^8.7.0",
+    "passport": "^0.7.0",
+    "passport-google-oauth": "^2.0.0"
   }
 }
