--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.0",
     "mongoose": "^8.7.0",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-google-oauth": "^2.0.0"
   }
